scrollbar fixed

--- a/FrontEnd/MISA/src/app/panel/panel.component.css
+++ b/FrontEnd/MISA/src/app/panel/panel.component.css
@@ -7,6 +7,8 @@
     height: 100vh;
     justify-content: flex-start;
     /* gap: 10px; */
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .panel_item {
